Actualizar texto métrica 2x

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 </div>
                 <div class="metric">
                     <div class="metric-value">2x</div>
-                    <div class="metric-label">Objetivo: duplicar ventas mientras llega el rebranding</div>
+                    <div class="metric-label">Objetivo: duplicar o m&aacute;s las ventas mientras llega el rebranding</div>
                 </div>
             </div>
             <p class="subtitle" style="margin-top: 40px;">
