Cambiar objetivo conversión a +30% mínimo

--- a/index.html
+++ b/index.html
@@ -835,8 +835,8 @@
                 <div class="feature-right">
                     <div class="feature-card">
                         <div class="feature-card-title">Objetivo</div>
-                        <div class="feature-card-value">+50%</div>
-                        <div class="feature-card-label">en tasa de conversi&oacute;n del sitio web</div>
+                        <div class="feature-card-value">+30%</div>
+                        <div class="feature-card-label">m&iacute;nimo en tasa de conversi&oacute;n del sitio web</div>
                     </div>
                 </div>
             </div>
