Actualizar card 01: diseño visual en Etapa 2 por M

--- a/index.html
+++ b/index.html
@@ -950,8 +950,8 @@
             <div class="justify-grid">
                 <div class="justify-card">
                     <div class="justify-num">01</div>
-                    <div class="justify-title">Dise&ntilde;o visual lo hace Cacao</div>
-                    <div class="justify-text">El equipo de Cacao Hunters ejecuta los cambios visuales bajo la direcci&oacute;n estrat&eacute;gica de LA REAL. Cuando llegue el rebranding, ustedes ya saben c&oacute;mo implementar.</div>
+                    <div class="justify-title">Dise&ntilde;o visual en Etapa 2</div>
+                    <div class="justify-text">El cambio visual del sitio lo haremos cuando el rebranding est&eacute; listo. Esa implementaci&oacute;n tiene un valor de <strong>$2.000.000 + IVA</strong> y se ejecuta en ese momento, no ahora.</div>
                 </div>
                 <div class="justify-card">
                     <div class="justify-num">02</div>
