Actualizar detalles fee mensual: Meta+Google, 40 piezas, optimizaciones basadas en datos, sesiones quincenales

--- a/index.html
+++ b/index.html
@@ -976,11 +976,11 @@
                     <div class="monthly-includes">
                         <div class="monthly-includes-title">Incluye</div>
                         <ul class="monthly-includes-list">
-                            <li><span class="monthly-check">&#10003;</span> Gesti&oacute;n de pauta (Meta, TikTok)</li>
+                            <li><span class="monthly-check">&#10003;</span> Gesti&oacute;n de pauta (Meta y Google)</li>
                             <li><span class="monthly-check">&#10003;</span> Email marketing y automatizaciones</li>
-                            <li><span class="monthly-check">&#10003;</span> Contenido para pauta y web</li>
-                            <li><span class="monthly-check">&#10003;</span> Optimizaciones mensuales en Shopify</li>
-                            <li><span class="monthly-check">&#10003;</span> Reportes y seguimiento</li>
+                            <li><span class="monthly-check">&#10003;</span> Contenido para pauta y web (hasta 40 piezas gr&aacute;ficas/mes)</li>
+                            <li><span class="monthly-check">&#10003;</span> Optimizaciones constantes en Shopify basadas en mapas de calor y ventas</li>
+                            <li><span class="monthly-check">&#10003;</span> Sesi&oacute;n quincenal de 1 hora + reportes semanales por WhatsApp</li>
                         </ul>
                     </div>
                 </div>
