Definir escala de comisión: 8% hasta M, 5% arriba de M

--- a/index.html
+++ b/index.html
@@ -989,12 +989,10 @@
                     <div class="monthly-card-value">8%</div>
                     <div class="monthly-card-label">Sobre ventas netas del ecommerce</div>
                     <div class="monthly-includes">
-                        <div class="monthly-includes-title">Negociable seg&uacute;n</div>
+                        <div class="monthly-includes-title">Escala por volumen</div>
                         <ul class="monthly-includes-list">
-                            <li><span class="monthly-check">&#10003;</span> Volumen de ventas</li>
-                            <li><span class="monthly-check">&#10003;</span> M&aacute;rgenes del negocio</li>
-                            <li><span class="monthly-check">&#10003;</span> Alcance de servicios</li>
-                            <li><span class="monthly-check">&#10003;</span> Puede bajar hasta 5%</li>
+                            <li><span class="monthly-check">&#10003;</span> <strong>8%</strong> hasta $25M/mes en ventas</li>
+                            <li><span class="monthly-check">&#10003;</span> <strong>5%</strong> a partir de $25M/mes</li>
                         </ul>
                     </div>
                 </div>
