Agregar forma de pago único y vigencia hasta 28 feb 2026

--- a/index.html
+++ b/index.html
@@ -944,6 +944,10 @@
                     Incluye los 4 m&oacute;dulos del M&eacute;todo REAL<br>
                     Implementaci&oacute;n en 40 d&iacute;as
                 </div>
+                <div style="margin-top: 24px; padding-top: 20px; border-top: 1px solid rgba(0,0,0,0.08);">
+                    <div style="font-size: 13px; font-weight: 600; color: #374151;">Forma de pago: <strong>Pago &uacute;nico</strong></div>
+                    <div style="font-size: 12px; font-weight: 500; color: #9ca3af; margin-top: 8px;">Propuesta vigente hasta el <strong style="color: #DC2626;">28 de febrero de 2026</strong></div>
+                </div>
             </div>
         </div>
 
